Fix modal width on mobile and fix links

--- a/src/app/components/modal/modal.component.css
+++ b/src/app/components/modal/modal.component.css
@@ -14,7 +14,7 @@
   transform: translate(-50%, -50%);
   background-color: white;
   border-radius: 5px;
-  width: 50%;
+  width: 80%;
   font-size: 1rem;
   overflow: hidden;
 }
